--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="claro">
+<html lang="en" class="root" class="claro">
 
 <head>
 
@@ -27,7 +27,7 @@
 
     <ul>
       <li>
-        <a href="#" target="_blank">Portifólio</a>
+        <a href="linkdopotfolio.com" target="_blank">Portfólio</a>
       </li>
 
       <li>
