add Staged Changes

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -51,7 +51,7 @@
         <ion-icon name="logo-linkedin"></ion-icon>
       </a>
 
-      <a href="https://calmaaaaaa.com" target="_blank">
+      <a href="javascript:void(0)" onclick="share()">
         <ion-icon name="share-social-outline"></ion-icon>
       </a>
     </div>
